# nacl-compat

./: Cargo.toml  README.md  SECURITY.md
.cargo/: audit.toml
.github/workflows/: crypto_box.yml  crypto_kx.yml  crypto_secretbox.yml  crypto_secretstream.yml  security-audit.yml  workspace.yml
crypto_box/: CHANGELOG.md  Cargo.toml  README.md
crypto_box/src/: lib.rs  public_key.rs  secret_key.rs
crypto_box/tests/: lib.rs
crypto_kx/: CHANGELOG.md  Cargo.toml  README.md
crypto_kx/src/: errors.rs  keypair.rs  keys.rs  lib.rs
crypto_kx/src/keys/: mod.rs  public.rs  secret.rs  session.rs
crypto_kx/tests/: lib.rs  sodiumoxide.rs
crypto_secretbox/: CHANGELOG.md  Cargo.toml  README.md
crypto_secretbox/src/: lib.rs
crypto_secretbox/tests/: lib.rs  xsalsa20poly1305.rs
crypto_secretstream/: CHANGELOG.md  Cargo.toml  README.md
crypto_secretstream/src/: errors.rs  header.rs  key.rs  lib.rs  nonce.rs  stream.rs  tags.rs
crypto_secretstream/tests/: lib.rs  sodiumoxide.rs
test-vector-gen/: Cargo.toml
test-vector-gen/src/: crypto_box.rs  crypto_kx.rs  crypto_secretbox.rs  crypto_secretstream.rs  main.rs
