[package]
name = "crypto_box"
version = "0.8.0-pre" # Also update html_root_url in lib.rs when bumping this
description = """
Pure Rust implementation of NaCl's crypto_box public-key authenticated
encryption primitive which combines the X25519 Elliptic Curve Diffie-Hellman
function and the XSalsa20Poly1305 authenticated encryption cipher
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/crypto_box"
homepage = "https://github.com/RustCrypto/nacl-compat"
repository = "https://github.com/RustCrypto/nacl-compat/tree/master/crypto_box"
categories = ["cryptography", "no-std"]
keywords = ["nacl", "libsodium", "public-key", "x25519", "xsalsa20poly1305"]
edition = "2021"
rust-version = "1.56"

[dependencies]
chacha20 = { version = "0.8", features = ["expose-core", "hchacha"] }
chacha20poly1305 = { version = "0.9", default-features = false }
rand_core = "0.6"
salsa20 = { version = "0.9", features = ["hsalsa20"] }
x25519-dalek = { version = "1", default-features = false }
xsalsa20poly1305 = { version = "0.8", default-features = false, features = ["rand_core"] }
zeroize = { version = "1", default-features = false }

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1"
default-features = false

[dev-dependencies]
bincode = "1"
rand = "0.8"
rmp-serde = "0.15"

[features]
default = ["alloc", "u64_backend"]
serde = ["serde_crate"]
std = ["rand_core/std", "xsalsa20poly1305/std"]
alloc = ["xsalsa20poly1305/alloc"]
heapless = ["xsalsa20poly1305/heapless"]
u32_backend = ["x25519-dalek/u32_backend"]
u64_backend = ["x25519-dalek/u64_backend"]

[package.metadata.docs.rs]
features = ["serde"]
rustdoc-args = ["--cfg", "docsrs"]
