[package]
name = "crypto_box"
version = "0.8.2"
description = """
Pure Rust implementation of NaCl's crypto_box public-key authenticated
encryption primitive which combines the X25519 Elliptic Curve Diffie-Hellman
function and the XSalsa20Poly1305 authenticated encryption cipher
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/crypto_box"
homepage = "https://github.com/RustCrypto/nacl-compat"
repository = "https://github.com/RustCrypto/nacl-compat/tree/master/crypto_box"
categories = ["cryptography", "no-std"]
keywords = ["nacl", "libsodium", "public-key", "x25519", "xsalsa20poly1305"]
edition = "2021"
rust-version = "1.56"

[dependencies]
aead = { version = "0.5.1", default-features = false }
chacha20 = "0.9"
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["rand_core"] }
salsa20 = "0.10"
x25519-dalek = { version = "1", default-features = false }
xsalsa20poly1305 = { version = "0.9", default-features = false, features = ["rand_core"] }
zeroize = { version = "1", default-features = false }

# optional dependencies
blake2 = { version = "0.10", optional = true, default-features = false }
serdect = { version = "0.1", optional = true, default-features = false }

[dev-dependencies]
bincode = "1"
rand = "0.8"
rmp-serde = "1"

[features]
default = ["alloc", "getrandom", "u64_backend"]
std = ["aead/std"]
serde = ["serdect"]
alloc = ["aead/alloc"]
getrandom = ["aead/getrandom", "rand_core"]
heapless = ["aead/heapless"]
rand_core = ["aead/rand_core"]
seal = ["alloc", "blake2"]
u32_backend = ["x25519-dalek/u32_backend"]
u64_backend = ["x25519-dalek/u64_backend"]

[package.metadata.docs.rs]
features = ["serde", "seal"]
rustdoc-args = ["--cfg", "docsrs"]
