[package]
name = "crypto_kx"
version = "0.2.1"
description = "Pure Rust implementation of libsodium's crypto_kx using BLAKE2"
authors = ["C4DT", "RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/crypto_kx"
homepage = "https://github.com/RustCrypto/nacl-compat/tree/master/crypto_kx"
repository = "https://github.com/RustCrypto/nacl-compat"
categories = ["cryptography", "no-std"]
keywords = ["nacl", "libsodium", "public-key", "blake2"]
edition = "2021"
rust-version = "1.85.0"

[dependencies]
blake2 = { version = "0.10", default-features = false }
curve25519-dalek = { version = "5.0.0-pre.1", default-features = false, features = ["zeroize"] }
rand_core = "0.9"

# optional dependencies
serdect = { version = "0.2", optional = true, default-features = false }

[dev-dependencies]
rand_core = { version = "0.9", features = ["os_rng"] }

[features]
serde = ["serdect"]
os_rng = ["rand_core/os_rng"]

[package.metadata.docs.rs]
features = ["serde"]
rustdoc-args = ["--cfg", "docsrs"]
