[package]
name = "crypto_secretbox"
version = "0.2.0-pre.0"
description = """
Pure Rust implementation of the XSalsa20Poly1305 (a.k.a. NaCl crypto_secretbox)
authenticated encryption cipher as well as the libsodium variant of
XChaCha20Poly1305
"""
authors = ["RustCrypto Developers"]
edition = "2021"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/crypto_secretbox"
homepage = "https://github.com/RustCrypto/nacl-compat/tree/master/crypto_secretbox"
repository = "https://github.com/RustCrypto/nacl-compat"
keywords = ["aead", "nacl", "poly1305", "salsa20", "xsalsa20"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[dependencies]
aead = { version = "=0.6.0-rc.2", default-features = false }
cipher = { version = "=0.5.0-rc.1", default-features = false }
hybrid-array = { version = "0.4.4", features = ["zeroize"] }
poly1305 = "=0.9.0-rc.2"
subtle = { version = "2", default-features = false }
zeroize = { version = "1", default-features = false }

# optional dependencies
chacha20 = { version = "=0.10.0-rc.2", optional = true, features = ["zeroize", "xchacha", "legacy"] }
salsa20 = { version = "=0.11.0-rc.1", optional = true, features = ["zeroize"] }

[dev-dependencies]
hex-literal = "0.4"

[features]
default = ["alloc", "os_rng", "rand_core", "salsa20"]
alloc = ["aead/alloc"]
std = ["alloc"]

heapless = ["aead/heapless"]
rand_core = ["aead/rand_core"]
os_rng = ["aead/os_rng"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
