[package]
name = "crypto_secretstream"
version = "0.3.0-pre"
description = """
Pure Rust implementation of libsodium's crypto_secretstream secret-key using
ChaCha20 and Poly1305
"""
authors = ["C4DT", "RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/crypto_secretstream"
homepage = "https://github.com/RustCrypto/nacl-compat/tree/master/crypto_secretstream"
repository = "https://github.com/RustCrypto/nacl-compat"
categories = ["cryptography"]
keywords = ["nacl", "libsodium", "public-key", "chacha20", "poly1305"]
edition = "2021"
rust-version = "1.85"

[dependencies]
aead = { version = "=0.6.0-rc.2", default-features = false }
chacha20 = { version = "=0.10.0-rc.2", features = ["xchacha"] }
poly1305 = "0.9.0-rc.2"
subtle = { version = "2", default-features = false }

rand_core = { version = "0.9", optional = true }

[dev-dependencies]
rand_core = { version = "0.9", features = ["std", "os_rng"] }

[features]
default = ["std", "rand_core"]
alloc = ["aead/alloc"]
std = ["alloc", "rand_core?/std"]

heapless = ["aead/heapless"]
rand_core = ["dep:rand_core"]

[package.metadata.docs.rs]
all-features = true
